--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,19 +13,21 @@
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.12",
-    "@react-navigation/native": "^7.1.8",
-    "@react-navigation/native-stack": "^7.3.12",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
-    "dayjs": "^1.11.13",
     "expo": "53.0.9",
     "expo-checkbox": "^4.1.4",
+    "expo-dev-client": "~5.1.8",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
-    "expo-dev-client": "~5.1.8"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
